src/App.css
/* .App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */


/* My CSS */ 

* {
  margin: 0; 
  box-sizing: border-box; 
} 

/* Navbar & Footer */ 
/* Navbar */
.Navbar {
  background-color: black; 
  color: white; 
  display: flex; 
  align-items: center; 
  /* max-width: 600px;  */
  padding: 20px; 
  margin: 0 auto; 
  /* border-bottom: 1px solid #f2f2f2;  */
  position: sticky; 
  top: 0; 
} 

.Nav-Links {
  margin-left: auto; 
} 

.Navbar a {
  color: white; 
  text-decoration: none; 
  padding: 6px; 
  margin-left: 5px;  
} 

/* Footer */ 
footer {
  height: 180px; 
  background-color: black; 
  color: #fff; 
} 

footer p {
  padding: 20px; 
} 

.Social-Links {
  margin-top: 0px; 
  margin-bottom: 20px; 
} 

.Social-Links a {
  color: #fff; 
  text-decoration: none; 
  padding: 10px; 
} 

.Footer-NavLinks {
  margin-top: 20px; 
  margin-bottom: 20px; 
} 

.Footer-NavLinks a {
  color: #fff; 
  text-decoration: none; 
  padding: 10px; 
} 

.Footer-Line {
  color: rgb(40, 241, 40); 
} 

.Footer-StoreName {
  margin-bottom: 0; 
} 
/* End of Navbar & Footer */ 


/* .Content {
  max-width: 600px; 
  margin: 40px auto; 
  padding: 20px; 
}  */ 


/* Home Page */ 
/* Header */ 
.Home-Header {
  height: 77vh; 
  background-image: url("../src/images/sale.jpg"); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
} 

/* Categories Section */ 
.Categories {
  text-align: center; 
  padding: 20px; 
  margin-top: 30px; 
  margin-bottom: 30px; 
} 

.Category-Title {
  text-align: center; 
} 

.Category-List {
  display: flex; 
  justify-content: center; 
  align-items: center;
  flex-wrap: wrap; 
  padding: 20px; 
} 

.Womens, .Mens, .Jewelry, .Electronics {
  height: 200px; 
  width: 500px; 
  display: flex; 
  justify-content: center; 
  align-items: center; 
  font-size: 25px; 
  color: #fff; 
  text-shadow: 0 0 15px black; 
  margin: 10px; 
} 

.Womens {
  border-top-left-radius: 100px; 
  border-bottom-right-radius: 100px; 
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../src/images/womens-clothes.jpg"); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
} 

.Mens {
  border-top-right-radius: 100px; 
  border-bottom-left-radius: 100px; 
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../src/images/mens-clothes.jpg"); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
} 

.Jewelry {
  border-top-right-radius: 100px; 
  border-bottom-left-radius: 100px; 
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../src/images/jewelry.jpg"); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
} 

.Electronics {
  border-top-left-radius: 100px; 
  border-bottom-right-radius: 100px; 
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../src/images/technology.jpg"); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
} 

.Shop-Button {  
  background-color: limegreen; 
  color: white; 
  padding: 10px; 
  font-size: 20px; 
  border: none; 
  border-radius: 5px; 
  box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #fff; 
  cursor: pointer; 
  transition: all 0.5s; 
} 

.Shop-Button:hover {
  background-color: rgb(40, 241, 40); 
} 

/* Mailing List Section */ 
.Mailing-List {
  text-align: center; 
  background-color: rgba(50, 205, 50, 0.356); 
  padding: 50px; 
} 

.Mailing-List h3 {
  font-size: 20px; 
  padding: 10px; 
  margin-bottom: 10px; 
} 

.Mailing-List p {
  font-weight: bold; 
  margin-bottom: 15px; 
} 

.Mailing-List input {
  font-size: 16px; 
  border-radius: 5px; 
  border-color: limegreen; 
  outline: none; 
  padding: 5px; 
  margin: 10px; 
} 

.Mailing-List button {
  background-color: limegreen; 
  color: white; 
  width: 60px;
  padding: 8px; 
  font-size: 16px; 
  border: none; 
  border-radius: 5px; 
  box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #fff; 
  cursor: pointer; 
  transition: all 0.5s; 
} 

.Mailing-List button:hover {
  background-color: rgb(40, 241, 40); 
} 
/* End of Home Page */

/* Shop Page */ 
/* Header */ 
.Shop-Header {
  height: 70vh; 
  width: 100%; 
  background-image: url(/src/images/summer-sale-banner.jpg); 
  background-position: center; 
  background-size: cover; 
  background-repeat: no-repeat; 
  margin: auto; 
} 
/* End of Header */

/* Product Details Display */
.Products-List {
  display: flex; 
  justify-content: center; 
  flex-wrap: wrap; 
} 

.Product-Preview {
  height: auto; 
  width: 200px; 
  padding: 20px; 
  border: 1px solid black; 
  margin: 10px 10px;
} 

.Product-Preview img {
  height: 100px; 
  width: 100px; 
}

.Product-Card {
  display: flex; 
  justify-content: center; 
  align-items: center; 
  margin: 70px auto; 
  /* max-width: 1000px; */
  /* flex-wrap: wrap; */
} 

.Product-Card img {
  height: 400px; 
  width: 400px; 
  /* border: 1px solid black;  */
} 

.Product-Description {
  /* border: 1px solid black;  */
  height: auto; 
  width: 800px; 
  padding: 50px; 
} 
/* End of Product Details Display */ 
/* End of Shop Page */ 


/* Login Page */ 
.Login {
  width: 430px; 
  height: 485px; 
  padding: 60px 35px 35px 35px; 
  border-radius: 40px; 
  background-color: #ecf0f3; 
  box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #cbced1; 
  margin: auto; 
  margin-top: 60px; 
  margin-bottom: 60px; 
} 

.Login h2 {
  text-align: center; 
  margin-bottom: 40px; 
} 

.Login-Labels {
  font-size: 20px; 
  font-weight: bold; 
} 

.Login-Inputs {
  width: 100%; 
  background: none; 
  outline: none; 
  border: none; 
  border-radius: 25px; 
  font-size: 18px; 
  padding: 15px 50px;  
  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff; 
  margin-top: 10px; 
  margin-bottom: 20px; 
} 

.Login-Button {
  height: 35px; 
  width: 100%; 
  border-radius: 25px; 
  border: none;
  font-size: 20px; 
  background-color: limegreen;
  color: white; 
  margin-top: 20px; 
  box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #fff; 
  cursor: pointer; 
  transition: all 0.5s; 
} 

.Login-Button:hover {
  background-color: rgb(40, 241, 40); 
} 

.Login-ErrorMessage {
  text-align: center; 
  font-weight: bold; 
  margin-top: 20px; 
  margin-bottom: 10px; 
} 
/* End of Login Page */ 

